Some modification  - added the game debrief  - finished states and steps implementation